# screening-is-enough-pytorch

./: .gitignore  README.md  pyproject.toml
configs/: corpus.example.yaml
scripts/: build_corpus.py  generate_text.py  inspect_abcdigits_checkpoint.py  prepare_corpus.py  train_abcdigits.py  train_abcdigits_smoke.py  train_corpus.py
src/abcdigits/: __init__.py  generator.py  task.py  tokenization.py  training.py
src/multiscreen/: __init__.py  config.py  corpus.py  corpus_build.py  data.py  generation.py  math.py  model.py  sizing.py  train.py  triton_kernels.py
tests/abcdigits/: test_generator.py  test_task.py  test_tokenization.py  test_training.py
tests/multiscreen/: test_corpus.py  test_corpus_build.py  test_generation.py  test_math.py  test_model.py  test_sizing.py  test_train.py  test_triton_backend.py
