[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screening-is-enough-pytorch"
version = "0.1.0"
description = "Unofficial PyTorch reimplementation for studying the Multiscreen architecture from Screening Is Enough."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.14"
dependencies = [
  "datasets>=2.20",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "schedulefree>=1.4",
  "torch>=2.5",
  "transformers>=4.52",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
